--- a/ERPWeb/Views/ControlPanel/_GetBranch.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetBranch.cshtml
@@ -5,10 +5,10 @@
 }
 
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12 px-0" >
         <table class="table table-bordered table-sm table-striped table-responsive-lg table-valign-middle tblBranchData" id="tblBranchData">
             <thead class="btn-dark">
-                <tr class="text-center">
+                <tr class="text-center text-sm">
                     <th>#SL</th>
                     <th class="hide"></th>
                     <th>Branch</th>
@@ -52,7 +52,7 @@
                         <td class="text-center text-sm">@br.UpdateUser</td>
 
                         <td class="text-center">
-                            <a href="#" class="btn btn-warning btn-sm data-edit-item" data-edit-item="@br.BranchId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class=" das-btn data-edit-item" data-edit-item="@br.BranchId"><i class="fa fa-pen"></i> Edit</a>
                         </td>
                     </tr>
                 }
