--- a/ERPWeb/Views/ControlPanel/_GetModules.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetModules.cshtml
@@ -25,14 +25,14 @@
                     sl = sl + 1;
                     <tr>
                         <td class="text-center"><b>@sl</b></td>
-                        <td class="hide">@module.MId</td>
-                        <td>@module.ModuleName</td>
-                        <td>@module.IconName</td>
-                        <td>@module.IconColor</td>
+                        <td class="hide ">@module.MId</td>
+                        <td class="text-center">@module.ModuleName</td>
+                        <td class="text-center">@module.IconName</td>
+                        <td class="text-center">@module.IconColor</td>
                         <td class="text-center text-sm">@module.EntryUser</td>
                         <td class="text-center text-sm">@module.UpdateUser</td>
                         <td class="text-center">
-                            <a href="#" class="btn btn-warning btn-sm data-module-item" data-module-item="@module.MId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class="das-btn data-module-item" data-module-item="@module.MId"><i class="fa fa-pen"></i> Edit</a>
                         </td>
                     </tr>
                 }
