--- a/ERPWeb/Views/Shared/_Layout.cshtml
+++ b/ERPWeb/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <link href="~/Content/PagedList.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/Site.css">
     <link href="~/Content/printJs.css" rel="stylesheet" />
+    <link href="~/Content/mystyles.css" rel="stylesheet" />
     @RenderSection("styles", false)
 
     <!-- Google Font: Source Sans Pro -->
