--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -46,36 +46,30 @@
 
                 @if (item.PaidAmount == 0 )
                 {
-                    <a href="#" class="btn btn-sm btn-outline-primary data-item-edit-ProductionSalesInfoId" title="View Edit" data-item-edit-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                    <a href="#" class="dasedit-btn data-item-edit-ProductionSalesInfoId" title="View Edit" data-item-edit-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
                         <i class="fas fa-edit"></i>
                     </a>
                 }
 
 
 
-                <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-ProductionSalesInfoId" title="View Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                <a href="#" class="emndetails-btn data-item-detail-ProductionSalesInfoId" title="View Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
                     <i class="fas fa-eye"></i>
                 </a>
 
 
 
-                @*<a href="#" class="btn btn-sm btn-outline-success data-edit-item-download" title="Download" data-edit-item-download="@item.ProductSalesInfoId" style="line-height:1"></a>*@
-                @*}
-        @if (privilege != null && privilege.Edit)
-        {*@
-                @*<a href="#" class="btn btn-sm btn-outline-success data-item-download" title="Download" id="rptType" name="rptType" data-item-download="@item.ProductSalesInfoId" style="line-height:1">
-            <i class="fas fa-download"></i>
-        </a>*@
 
-                <a href="@Url.Action("AgroProductSalesReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-success" title="Download Invoice"><i class="fas fa-file-invoice"></i></a>
 
-                <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-warning" title="Download Challan">
+                <a href="@Url.Action("AgroProductSalesReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="emninvoice-btn" title="Download Invoice"><i class="fas fa-file-invoice"></i></a>
+
+                <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="emnchalan-btn" title="Download Challan">
                     <i class="fa-solid fa-receipt"></i>
                 </a>
 
                 @if (item.PaidAmount == 0 || item.DueAmount == 0)
                 {
-                    <a href="@Url.Action("AgroProductSalesInvoiceDropReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" data-item-download-ProductionSalesInfoId="@item.ProductSalesInfoId" class="btn btn-sm btn-outline-dark " title="Download Drop Invoice">
+                    <a href="@Url.Action("AgroProductSalesInvoiceDropReports", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" data-item-download-ProductionSalesInfoId="@item.ProductSalesInfoId" class="emnDrop-btn" title="Download Drop Invoice">
                         <i class="fas fa-tint"></i>
                     </a>
                 }
