--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockpurchaseList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockpurchaseList.cshtml
@@ -5,7 +5,7 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
+    <div class="col-md-12">
         <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblTerritoryData">
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -40,7 +40,7 @@
                         <td class="text-center">@item.TotalAmount</td>
                         <td class="text-center">
                             @*<a href="#" class="btn btn-warning btn-sm data-item-detail" style="line-height:1" data-item-detail="@item.PRawMaterialStockId"><i class="fa fa-pen"></i> Details</a>*@
-                            <a href="#" class="btn btn-sm btn-outline-warning data-item-detail" title="View Detail" data-item-detail="@item.PRawMaterialStockId" style="line-height:1">
+                            <a href="#" class="emndetails-btn data-item-detail" title="View Detail" data-item-detail="@item.PRawMaterialStockId" style="line-height:1">
                                 <i class="fas fa-eye"></i>
                             </a>
                         </td>
