--- a/ERPWeb/Views/ControlPanel/_GetRole.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetRole.cshtml
@@ -3,7 +3,7 @@
     int sl = 0;
 }
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 px-0">
         <table class="table table-bordered table-striped table-sm table-responsive-lg tblRoles" id="tblRoles"> 
             <thead class="btn-dark">
                 <tr class="text-center">
@@ -32,11 +32,11 @@
                         <td class="text-center">
                             @if (ViewBag.OPFor == "System")
                             {
-                                <a href="@Url.Action("CreateAppRole","ControlPanel", new { id=role.RoleId})" class="btn btn-sm btn-warning btn-flat"><i class="fas fa-pen"></i> Edit</a>
+                                <a href="@Url.Action("CreateAppRole","ControlPanel", new { id=role.RoleId})" class="das-btn btn-flat"><i class="fas fa-pen"></i> Edit</a>
                             }
                             @if (ViewBag.OPFor == "Client")
                             {
-                                <a href="@Url.Action("CreateUserRole","ControlPanel", new { id=role.RoleId})" class="btn btn-sm btn-warning btn-flat"><i class="fas fa-pen"></i> Edit</a>
+                                <a href="@Url.Action("CreateUserRole","ControlPanel", new { id=role.RoleId})" class="das-btn btn-flat"><i class="fas fa-pen"></i> Edit</a>
                             }
                         </td>
                     </tr>
